更改联系方式

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       不要问我网页为什么那么简陋，因为我懒，凑合用吧。
     </div>
     <div>
-      若遇到BUG请至{{'<Mindustry>'}}群联系我本人
+      若遇到BUG请+Q623607898联系我本人
     </div>
     <div>
       本网页不会永久在线，若有需要请自行另存为
