--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./js/jquery.min.js"></script>
   <script src="./js/vue.min.js"></script>
-  <script src="./js/main.js"></script>
+  <script src="./js/pako.min.js"></script>
+  <script src="./js/main.js" type="module"></script>
   <title>Document</title>
   <style>
     .copyed {
@@ -22,13 +23,13 @@
 <body>
   <div id="app">
     <div>
-      输出大小<input type="text" v-model="size" name="输出大小" id="size" />
+      输出大小<input type="text" v-model="size" name="输出大小" id="size" disabled/>
     </div>
     <div>
       压缩精度(0~7)<input type="text" v-model="compress" name="压缩精度" placeholder="0~7" id="compress" />
     </div>
     <div>
-      屏幕名称<input type="text" v-model="screenname" name="屏幕名称" placeholder="display1" />
+      屏幕名称<input type="text" v-model="screenname" name="屏幕名称" placeholder="display1" disabled/>
     </div>
 
     <input type="file" id="filegetter" accept="image/*" />
@@ -37,20 +38,20 @@
       <canvas id="showimage"></canvas>
     </div>
 
-    <div style="margin-top:10px">
+    <!-- <div style="margin-top:10px">
       <input :class="{'copyed':code.copyed}" type="submit" :value="'复制处理器 ' + index" v-for="(code, index) in codedata"
         :key="index" @click="copy(code)" />
-    </div>
-    <textarea name="" id="textarea" cols="30" rows="10" style="height:100px; width: 100px;margin-top:10px"></textarea>
-    <div>
-      本工具由 BUI 编写，转载请声明出处
-      <!-- 请勿删除此行 -->
-    </div>
+    </div> -->
+    <textarea name="" id="textarea" cols="30" rows="10" style="height:100px; width: 100%;margin-top:10px"></textarea>
+   
     <div>
       压缩精度值越大，图片失真越严重，处理器数量越少。数值范围为0~7，0即为无压缩。转换后将显示预览图，请根据预览图自行决定压缩力度。
     </div>
-    <div>
+    <!-- <div>
       点击按钮复制处理器按钮，网页将自动复制代码至剪贴板，若无效，请自行全选复制下方文本域中的内容。
+    </div> -->
+    <div>
+      点击转换后将自动复制文本，到游戏内点击：蓝图->导入蓝图->剪切板导入
     </div>
     <div>
       不要问我网页为什么那么简陋，因为我懒，凑合用吧。
@@ -60,6 +61,10 @@
     </div>
     <div>
       本网页不会永久在线，若有需要请自行另存为
+    </div>
+    <div>
+      本工具由 BUI 编写，转载请声明出处
+      <!-- 请勿删除此行 -->
     </div>
   </div>
 </body>
