--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <body>
   <div id="app">
     <div>
+      蓝图名称<input type="text" v-model="mschName" name="蓝图名称" id="size"/>
+    </div>
+    <div>
       输出大小<input type="text" v-model="size" name="输出大小" id="size" disabled/>
     </div>
     <div>
