--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     <div style="height: 200px; width: 200px">
       <canvas id="showimage"></canvas>
     </div>
-
+    <div style="color: red;">
+      <p>本页面将于近期弃用并下线</p>
+      <p>请访问最新版：<a href="https://buibiu.github.io/imageToMLogicPage/#/">图片转逻辑工具</a></p>
+    </div>
     <!-- <div style="margin-top:10px">
       <input :class="{'copyed':code.copyed}" type="submit" :value="'复制处理器 ' + index" v-for="(code, index) in codedata"
         :key="index" @click="copy(code)" />
